[metadata]
name = miyadaiku_theme_tether
version = attr: miyadaiku_theme_tether.__version__
url = https://miyadaiku.github.io/miyadaiku-theme-tether
author = Atsuo Ishimoto
description = Tether.js files for miyadaiku static site generator
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Documentation = https://miyadaiku.github.io/
    Source = https://miyadaiku.github.io/miyadaiku-theme-tether

[options]
python_requires = >=3.13
packages = find:
include_package_data = true
zip_safe = false

setup_requires =
    wheel
    setuptools-git

install_requires =
    miyadaiku>=1.0.0

[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake

